--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -150,6 +150,12 @@
     <script src="scripts/components/auth/provider/auth.session.service.js"></script>
     <script src="scripts/app/account/sessions/sessions.js"></script>
     <script src="scripts/app/account/sessions/sessions.controller.js"></script>
+    <script src="scripts/app/entities/project/project.js"></script>
+    <script src="scripts/app/entities/project/project.controller.js"></script>
+    <script src="scripts/app/entities/project/project-dialog.controller.js"></script>
+    <script src="scripts/app/entities/project/project-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/project/project-detail.controller.js"></script>
+    <script src="scripts/components/entities/project/project.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
